--- a/Norway.html
+++ b/Norway.html
@@ -140,27 +140,27 @@ color: #002868;
 
 
 <h1</h1>
-<h3>Where is Norway?</h3>
-	<p> Norway is a scandinavian country located in northern Europe. It's bordered by the North Sea and the Norwegian Sea and Sweden to the east. Norway covers 304,282 square kilometers of land and 19,520 square kilometers of water, making it the 68th largest nation in the world with a total area of 323,802 square kilometers. Norway is best known for the fjords, the midnight sun and the northern lights.
+<h3>Subheading 1</h3>
+	<p> Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed pellentesque blandit cursus. Phasellus condimentum maximus volutpat. In dui odio, rutrum a ante non, tempor elementum purus. Sed eleifend varius vehicula. Aliquam a sodales lacus, sed euismod orci.
 	
 	<img src="tromso.jpg" width="200px"class="center"> 
 	
 	<img src="fjord.jpg" width="170px"class="center"> <img src="bergen.jpg" width="200px"class="center">  </p>
 	
-	<h5>Norwegian Dialects</h5>
+	<h5>Subheading 2</h5>
 	
 	
-	<h2>The Norwegian dialects are divided into four primary groups: Western Norwegian which is known as Vestlandsk, Eastern Norwegian (Ostlandsk), Central Norwegian which is known as Trondersk and Nordnorsk which is also known as Northern Norwegian. There are two types of Norwegian language spoken in Norway; Bokmal and Nynorsk. Bokmal is a Norwegianised version of Danish and Nynorsk is a language form based on Norwegian dialects. 86% use Bokmal as their written language. 
+	<h2>Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque finibus aliquam odio. Morbi id tristique diam, sit amet semper ex. Nulla tincidunt massa ac urna tristique tempor non vitae lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum sollicitudin massa at.
     <img src="dialect.jpg" width="300px"class="center">  <img src="dialect2.png" width="300px"class="center"> </h2>
-	<h3>Celebrations!</h3>
+	<h3>Subheading 3</h3>
 	
-	<h4>On May 17th, Norwegians celebrate the National Day of Norway. In Norway, the Constitution Day is a huge celebration. While, many countries celebrate their national day with a military parade, Norway's May the 17th is more of a party for everyone, especially the children. Everyone wears traditional Norwegian clothing, greet each other and have fun.
+	<h4>Nam ut dictum erat, vitae feugiat lectus. Donec aliquet imperdiet tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum sollicitudin massa at quam auctor, ut egestas lectus convallis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque finibus aliquam odio. Morbi id tristique diam, sit. Sed pellentesque blandit cursus.
 	
 	<img src="may.jpg" width="300px"class="center">  <img src="may2.jpg" width="250px"class="center"> <img src="17.jpg" width="220px"class="center">
 	
-	<h6>Another event Norwegians celebrate is Midsummer. It begins on the third Friday in June also known as Midsummer's Eve, when everybody comes to the countryside, makes wreaths from flowers to decorate their hair and dances around the maypole singing traditional songs, barbecues, have a drink and host parties into the night with friends 
+	<h6>Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque finibus aliquam odio. Morbi id tristique diam, sit amet semper ex. Nulla tincidunt massa ac urna tristique tempor non vitae lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum sollicitudin massa at quam auctor, ut egestas lectus convallis.
 	<img src="mid.jpg" width="250px"class="center"> <img src="mid2.jpg" width="280px"class="center">  <img src="mid3.jpg" width="260px"class="center"> </h6>
 	
-	<h3> Famous cities in Norway</h3>
-	<h4> Oslo is the capital of Norway which means that it's the largest city in Norway and it's beautifully located by the Oslo fjord. There are about 1.27 million people living in Oslo. Another famous city in Norway is Tromso. Tromso is also known as the Paris of the North and the city is also a popular place to observe the northern lights. Tromso is also known for the polarnights and there is a polarnight marathon once a year which is the largest marathon race in Norway.
-	<img src="oslo.jxr" width="200px"class="center"> <img src="marathon.jpg" width="230px"class="center"> <img src="troms.jpg" width="270px"class="center">
+	<h3> Subheading 4</h3>
+	<h4> Vestibulum sollicitudin. Nam ut dictum erat, vitae feugiat lectus. Donec aliquet imperdiet tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum sollicitudin massa at quam auctor, ut egestas lectus convallis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum sollicitudin massa at quam auctor, ut egestas lectus convallis.
+	<img src="oslo.jxr" width="200px"class="center"> <img src="marathon.jpg" width="230px"class="center"> <img src="troms.jpg" width="290px"class="center">
